// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CenteredActionFooter Prop Tests with a center action should display a center action 1`] = `
<CenteredActionFooter
  center="Center Action"
>
  <BlockActionFooter
    className="centered-action-footer"
  >
    <div
      className="block-action-footer with-actions centered-action-footer"
    >
      Center Action
    </div>
  </BlockActionFooter>
</CenteredActionFooter>
`;

exports[`CenteredActionFooter Prop Tests without a center action should display no actions 1`] = `
<CenteredActionFooter>
  <BlockActionFooter
    className="centered-action-footer"
  >
    <div
      className="block-action-footer centered-action-footer"
    />
  </BlockActionFooter>
</CenteredActionFooter>
`;

exports[`CenteredActionFooter Snapshot Tests should render a footer with an anchor 1`] = `
<BlockActionFooter
  className="centered-action-footer"
>
  <a
    href="/"
  >
    Test
  </a>
</BlockActionFooter>
`;

exports[`CenteredActionFooter Snapshot Tests should render a footer with two buttons 1`] = `
<BlockActionFooter
  className="centered-action-footer"
>
  <div>
    <button
      type="button"
    >
      Button 1
    </button>
    <button
      type="button"
    >
      Button 2
    </button>
  </div>
</BlockActionFooter>
`;

exports[`CenteredActionFooter Snapshot Tests should render an empty footer 1`] = `
<BlockActionFooter
  className="centered-action-footer"
/>
`;

exports[`CenteredActionFooter correctly applies the theme context className 1`] = `
<CenteredActionFooter
  center="Center Action"
>
  <BlockActionFooter
    className="centered-action-footer"
  >
    <div
      className="block-action-footer with-actions orion-fusion-theme centered-action-footer"
    >
      Center Action
    </div>
  </BlockActionFooter>
</CenteredActionFooter>
`;
